--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="cs">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SGO úkoly</title>
@@ -10,28 +11,28 @@
     <h1>úkoly</h1>
     <h2>do občanky</h2>
     <div id="ovCont" class="brCont">
-        <button  class="potatoBtn">Zobrazit</button>
+        <button id="potatoBtn1" class="potatoBtn">Zobrazit</button>
         <br>
-        <button  class="potatoBtn">Zobrazit</button>
+        <button id="potatoBtn2" class="potatoBtn">Zobrazit</button>
         <br>
-        <button  class="potatoBtn">Zobrazit</button>
+        <button id="potatoBtn3" class="potatoBtn">Zobrazit</button>
         <br>
-        <button  class="potatoBtn">Zobrazit</button>
+        <button id="potatoBtn4" class="potatoBtn">Zobrazit</button>
         <br>
-        <button  class="potatoBtn">Zobrazit</button>
+        <button id="potatoBtn5" class="potatoBtn">Zobrazit</button>
         <br>
-        <button  class="potatoBtn">Zobrazit</button>
+        <button id="potatoBtn6" class="potatoBtn">Zobrazit</button>
         <br>
-        <button  class="potatoBtn">Zobrazit</button>
+        <button id="potatoBtn7" class="potatoBtn">Zobrazit</button>
         <br>
-        <button  class="potatoBtn">Zobrazit</button>
+        <button id="potatoBtn8" class="potatoBtn">Zobrazit</button>
         <br>
-        <button  class="potatoBtn">Zobrazit</button>
+        <button id="potatoBtn9" class="potatoBtn">Zobrazit</button>
     </div>
     <div id="brMenu">
         <h3 id="brH"></h3>
         <p id="brP"></p>
-        <a href="" download>Stáhnout Domácí úkol</a>
+        <a id="brA" download>Stáhnout Domácí úkol</a>
     </div>
 </body>
 </html>
