--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SGO úkoly</title>
+    <script src="script.js"></script>
 </head>
 <body>
     <img src="logo.jfif" alt="logo SGO">
