--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <img src="logo.jfif" alt="logo SGO">
+    <img id="logo" src="logo.jfif" alt="logo SGO">
     <h1>úkoly</h1>
     <h2>do občanky</h2>
     <div id="ovCont" class="brCont">
